# sawyer-network

./: README.md  pyproject.toml
.github/workflows/: deploy-site.yml
docs/: provider-recruitment-posts.md
sawyer/: __init__.py  cli.py  config.py  server.py
sawyer/auth/: middleware.py
sawyer/client/: __init__.py  faq_html.py
sawyer/dashboard/: server.py
sawyer/expert/: __init__.py  extractor.py  shard.py
sawyer/model/: registry.py
sawyer/provider/: node_tiers.py  revenue_pool.py
sawyer/router/: backend.py  pipeline.py
sawyer/storage/: __init__.py  accountant.py  database.py
scripts/: install_sawyer.sh  install_sawyer_macos.sh
site/: index.html  install-macos.sh  install.ps1  install.sh  vercel.json
tests/: test_auth_middleware.py  test_config.py  test_expert_extraction.py  test_node_tiers.py  test_revenue_pool.py  test_server.py  test_storage.py
