[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sawyer-core"
version = "0.3.5"
description = "Distributed MoE inference network — the load is split, friends help"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
authors = [
    {name = "InFill Systems, LLC"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "infill-bedrock>=0.3.1",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "cryptography>=42.0.0",
    "stripe>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.9",
]
inference = [
    "vllm>=0.4.0",
    "llama-cpp-python>=0.2.60",
]

[project.urls]
Homepage = "https://sawyer.infill.systems"
Repository = "https://github.com/drc10101/sawyer"
Documentation = "https://github.com/drc10101/sawyer#readme"
Issues = "https://github.com/drc10101/sawyer/issues"

[project.scripts]
sawyer = "sawyer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sawyer*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"sawyer" = ["sawyer.ico", "sawyer.bat"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]